--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "webpack-demo",
   "version": "1.0.0",
   "description": "Webpack is used to compile JavaScript modules.",
-  "main": "index.js",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,5 +20,8 @@
   "devDependencies": {
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
