--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Webpack is used to compile JavaScript modules.",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
